[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/monster/lizard/Idle1.png" type="Texture" id=1]
[ext_resource path="res://Assets/player/Male_Spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/backgorund/origbig.png" type="Texture" id=3]
[ext_resource path="res://battlescene2.gd" type="Script" id=4]
[ext_resource path="res://Assets/backgorund/hitam.jpg" type="Texture" id=5]
[ext_resource path="res://Assets/monster/lizard/Idle2.png" type="Texture" id=6]
[ext_resource path="res://Assets/monster/lizard/Idle3.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 1, 0.0666667, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[node name="BattleScene" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
margin_right = 152.0
margin_bottom = 96.0
script = ExtResource( 4 )

[node name="Hitam" type="Sprite" parent="Control"]
position = Vector2( 511.5, 483.5 )
scale = Vector2( 0.800781, 0.326389 )
texture = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_right = 1024.0
margin_bottom = 368.0
texture = ExtResource( 3 )
expand = true

[node name="Sprite" type="Sprite" parent="Control/TextureRect"]
position = Vector2( 147, 219 )
scale = Vector2( 6, 5.6875 )
texture = ExtResource( 2 )
centered = false
flip_h = true
hframes = 3
vframes = 3
frame = 7

[node name="Sprite2" type="AnimatedSprite" parent="Control/TextureRect"]
position = Vector2( 790, 247 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
frame = 1
playing = true
flip_h = true

[node name="Panel" type="Panel" parent="Control/TextureRect"]
margin_left = 52.0
margin_top = 410.0
margin_right = 956.0
margin_bottom = 538.0

[node name="FightButton" type="Button" parent="Control/TextureRect/Panel"]
margin_left = 712.0
margin_top = 16.0
margin_right = 832.0
margin_bottom = 56.0
text = "Fight"

[node name="RunButton" type="Button" parent="Control/TextureRect/Panel"]
margin_left = 712.0
margin_top = 72.0
margin_right = 832.0
margin_bottom = 112.0
text = "Run"

[node name="Label" type="Label" parent="Control/TextureRect/Panel"]
margin_right = 696.0
margin_bottom = 126.0
align = 1
valign = 1

[node name="monsterhp" type="ProgressBar" parent="Control"]
margin_left = 669.0
margin_top = 138.0
margin_right = 967.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 171, 34 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0

[node name="Playerhp" type="ProgressBar" parent="Control"]
margin_left = 42.0
margin_top = 142.0
margin_right = 340.0
margin_bottom = 176.0
rect_pivot_offset = Vector2( 171, 34 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0

[connection signal="pressed" from="Control/TextureRect/Panel/FightButton" to="Control" method="_on_FightButton_pressed"]
[connection signal="pressed" from="Control/TextureRect/Panel/RunButton" to="Control" method="_on_RunButton_pressed"]
